[gd_scene format=3 uid="uid://c7w5t24ug21t4"]

[ext_resource type="Script" uid="uid://cjnhrlp6jyj84" path="res://scripts/events/event_screen.gd" id="1_opc24"]

[node name="EventScreen" type="Control" unique_id=1827244103]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opc24")

[node name="Background" type="ColorRect" parent="." unique_id=54869142]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.101960786, 0.18039216, 1)

[node name="TitleLabel" type="Label" parent="." unique_id=2067141973]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 20.0
offset_right = 36.0
offset_bottom = 43.0
grow_horizontal = 2
text = "‚ùì EVENT"
horizontal_alignment = 1

[node name="EventNameLabel" type="Label" parent="." unique_id=1315366316]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_top = 60.0
offset_right = 47.0
offset_bottom = 83.0
grow_horizontal = 2
text = "Event Name"
horizontal_alignment = 1

[node name="ContentContainer" type="VBoxContainer" parent="." unique_id=442977901]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 100.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescriptionPanel" type="PanelContainer" parent="ContentContainer" unique_id=472199509]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="DescriptionMargin" type="MarginContainer" parent="ContentContainer/DescriptionPanel" unique_id=829331975]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="DescriptionLabel" type="Label" parent="ContentContainer/DescriptionPanel/DescriptionMargin" unique_id=2064565731]
layout_mode = 2
text = "Event description goes here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="ContentContainer" unique_id=1164467516]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ChoiceAButton" type="Button" parent="ContentContainer/ChoicesContainer" unique_id=1518797999]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "[A] Choice A text"

[node name="ChoiceBButton" type="Button" parent="ContentContainer/ChoicesContainer" unique_id=1890118860]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "[B] Choice B text"

[node name="ChoiceCButton" type="Button" parent="ContentContainer/ChoicesContainer" unique_id=391711232]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "[C] Choice C text"

[node name="OutcomePanel" type="PanelContainer" parent="ContentContainer" unique_id=1230919511]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="OutcomeContent" type="VBoxContainer" parent="ContentContainer/OutcomePanel" unique_id=520413291]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="OutcomeLabel" type="Label" parent="ContentContainer/OutcomePanel/OutcomeContent" unique_id=1969967685]
layout_mode = 2
text = "Outcome text..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="ContentContainer/OutcomePanel/OutcomeContent" unique_id=1575148594]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "CONTINUE"
